--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <html lang="fr">
 
 <head>
+	<!-- AJOUT PRELOAD -->
 	<link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap">
+	<!-- VERSION MINIFIER DE BOOTSTRAP DEPUIS LE CDN -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -61,7 +63,9 @@
 		content="Nina Carducci photographe professionnelle basée à Paris. Capturant des moments précieux, contactez-moi pour un devis rapide.">
 	<meta name="twitter:image" content="https://anaissclt.github.io/OcNinaCarducci/assets/images/nina.png">
 
+	<!-- VERSION MINIFIER DE BOOTSTRAP  -->
 	<script src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
+	<!-- AJOUT ATTRIBUT DEFER  -->
 	<script defer src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<script defer src="./assets/maugallery.js"></script>
 	<script defer src="./assets/scripts.js"></script>
@@ -87,7 +91,6 @@
 			</nav>
 		</div>
 
-		<!-- REMPLACEMENT DIV PAR HEADER -->
 		<div id="header">
 
 			<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
@@ -103,7 +106,7 @@
 					<div class="carousel-item active">
 						<!-- AJOUT ATTRIBUT ALT PHOTOGRAPHIE -->
 						<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100"
-							alt="Photographie d'un homme en costume traversant un passage piéton">
+							alt="Photographie d'un homme en costume traversant un passage piéton" loading="eager">
 					</div>
 					<div class="carousel-item">
 						<!-- AJOUT ATTRIBUT ALT PHOTOGRAPHIE -->
@@ -136,7 +139,7 @@
 		<section id="about">
 			<div class="picture left">
 				<!-- AJOUT ATTRIBUT ALT PHOTOGRAPHIE -->
-				<img src="./assets/images/nina.webp" alt="Photographie de la photographe Nina Carducci">
+				<img src="./assets/images/nina.webp" alt="Photographie de la photographe Nina Carducci" loading="lazy">
 			</div>
 			<div id="about-me">
 				<!-- REMPLACEMENT H3 PAR H2 -->
@@ -166,31 +169,31 @@
 					<!-- AJOUT ATTRIBUT ALT DES PHOTOGRAPHIES -->
 					<img data-gallery-tag="Concert" class="gallery-item"
 						src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp"
-						alt="Photographie de la scène lors d'un concert">
+						alt="Photographie de la scène lors d'un concert" loading="lazy">
 					<img data-gallery-tag="Entreprises" class="gallery-item"
 						src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp"
-						alt="Photographie d'un homme en costume">
+						alt="Photographie d'un homme en costume" loading="lazy">
 					<img data-gallery-tag="Entreprises" class="gallery-item"
 						src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp"
-						alt="Photographie d'une femme souriant largement">
+						alt="Photographie d'une femme souriant largement" loading="lazy">
 					<img data-gallery-tag="Mariages" class="gallery-item"
 						src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp"
-						alt="Photographie de deux mains s'approchant l'une de l'autre">
+						alt="Photographie de deux mains s'approchant l'une de l'autre" loading="lazy">
 					<img data-gallery-tag="Portrait" class="gallery-item"
 						src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp"
-						alt="Photographie d'un homme plissant les yeux face au soleil">
+						alt="Photographie d'un homme plissant les yeux face au soleil" loading="lazy">
 					<img data-gallery-tag="Mariages" class="gallery-item"
 						src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp"
-						alt="Photographie d'un couple de mariés se tenant la main">
+						alt="Photographie d'un couple de mariés se tenant la main" loading="lazy">
 					<img data-gallery-tag="Portrait" class="gallery-item"
 						src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp"
-						alt="Photographie spontanée d'une femme">
+						alt="Photographie spontanée d'une femme" loading="lazy">
 					<img data-gallery-tag="Concert" class="gallery-item"
 						src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp"
-						alt="Photographie d'un chanteur sur scène en train de chanter">
+						alt="Photographie d'un chanteur sur scène en train de chanter" loading="lazy">
 					<img data-gallery-tag="Entreprises" class="gallery-item"
 						src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp"
-						alt="Photographie d'une femme à son bureau, en train de rire avec éclat">
+						alt="Photographie d'une femme à son bureau, en train de rire avec éclat" loading="lazy">
 				</div>
 			</div>
 			<!-- REMPLACEMENT DIV PAR ASIDE -->
@@ -283,7 +286,7 @@
 				</div>
 				<div class="picture right">
 					<!-- AJOUT ATTRIBUT ALT PHOTOGRAPHIE -->
-					<img src="./assets/images/camera.webp" alt="Photographie d'un appareil photo">
+					<img src="./assets/images/camera.webp" alt="Photographie d'un appareil photo" loading="lazy">
 				</div>
 			</div>
 		</section>
